--- a/package.json
+++ b/package.json
@@ -21,16 +21,25 @@
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/local-notifications": "^5.17.1",
+    "@ionic-native/native-geocoder": "^5.22.0",
+    "@ionic-native/push": "^5.21.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@logisticinfotech/ionic4-datepicker": "^1.4.3",
-    "cordova-android": "8.1.0",
+    "@types/leaflet": "^1.5.9",
+    "cordova-android": "^8.1.0",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-nativegeocoder": "^3.2.2",
+    "cordova-support-google-services": "^1.3.2",
     "core-js": "^2.5.4",
+    "ionic": "5.4.9",
+    "leaflet": "^1.6.0",
     "moment": "^2.24.0",
+    "phonegap-plugin-multidex": "^1.0.0",
+    "phonegap-plugin-push": "^2.3.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
@@ -77,7 +86,12 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "phonegap-plugin-push": {
+        "ANDROID_SUPPORT_V13_VERSION": "27.+",
+        "FCM_VERSION": "17.0.+"
+      },
+      "cordova-plugin-nativegeocoder": {}
     },
     "platforms": [
       "android"
